tests/compile_fail/as_ref/unknown_struct_attr_arg.stderr
error: only `forward` allowed here
 --> tests/compile_fail/as_ref/unknown_struct_attr_arg.rs:2:10
  |
2 | #[as_ref(baz)]
  |          ^^^
